도구 창 추가(모바일 X)

--- a/API2.html
+++ b/API2.html
@@ -63,7 +63,7 @@
         </dl>
     </aside>
     <article>
-        <section id="api2">
+        <section class="docs_con" id="API2">
             <div id="3-1" class="content">
                 <p class="title">App</p>
                 <p class="dscrpt">Api2 중 <strong>App</strong>은 카카오톡 구동 앱에 관한 기능을 제공합니다.</p>
