--- a/appendix.html
+++ b/appendix.html
@@ -63,22 +63,10 @@
                 <dd id="d99-3" class="sdb">문의하기</dd>
             </span>
         </dl>
-        <div id="docs_fun">
-            <img id="search" src="img/search.png">
-            <div id="autocomplete">
-                <li class="auto">로렘입숨</li>
-                <li class="auto">로오렘입숨</li>
-                <li class="auto">로오오렘입숨</li>
-                <li class="auto">로오오오렘입숨</li>
-                <li class="auto">로오오오오렘입숨</li>
-            </div>
-            <form autocomplete="off">
-                <input id="search" type="text" placeholder="검색...">
-            </form>
-        </div>
+        
     </aside>
     <article>
-        <section id="appendix">
+        <section class="docs_con" id="appendix">
             <div id="99-1" class="content">
                 <p class="title">참고자료</p>
                 <li class="a" id="https://deviolet.tistory.com/entry/%EB%A9%94%EC%8B%A0%EC%A0%80%EB%B4%87-%EA%B0%80%EC%9D%B4%EB%93%9C">메신저봇 가이드</li><br>
