--- a/legacyAPI.html
+++ b/legacyAPI.html
@@ -70,22 +70,10 @@
                 <dd id="d2-10" class="sdb">imageDB</dd>
             </span>
         </dl>
-        <div id="docs_fun">
-            <img id="search" src="img/search.png">
-            <div id="autocomplete">
-                <li class="auto">로렘입숨</li>
-                <li class="auto">로오렘입숨</li>
-                <li class="auto">로오오렘입숨</li>
-                <li class="auto">로오오오렘입숨</li>
-                <li class="auto">로오오오오렘입숨</li>
-            </div>
-            <form autocomplete="off">
-                <input id="search" type="text" placeholder="검색...">
-            </form>
-        </div>
+        
     </aside>
     <article>
-        <section id="api">
+        <section class="docs_con" id="legacyAPI">
             <div id="2-1" class="content">
                 <p class="title">Api</p>
                 <p class="dscrpt">레거시 Api 중 <strong>Api</strong>는 봇의 기본적인 기능을 담고 있습니다.</p>
