--- a/rhino.html
+++ b/rhino.html
@@ -72,22 +72,10 @@
                 <dd id="d4-12" class="sdb">함수</dd>
             </span>
         </dl>
-        <div id="docs_fun">
-            <img id="search" src="img/search.png">
-            <div id="autocomplete">
-                <li class="auto">로렘입숨</li>
-                <li class="auto">로오렘입숨</li>
-                <li class="auto">로오오렘입숨</li>
-                <li class="auto">로오오오렘입숨</li>
-                <li class="auto">로오오오오렘입숨</li>
-            </div>
-            <form autocomplete="off">
-                <input id="search" type="text" placeholder="검색...">
-            </form>
-        </div>
+        
     </aside>
     <article>
-        <section id="rhino">
+        <section class="docs_con" id="rhino">
             <div id="4-1" class="content">
                 <p class="title">기초</p>
                 <p class="dscrpt">JavaScript에 첫 발을 내딛기 위해서는 가장 기초적인 것들을 알아야 합니다. 이 장에서는 JavaScript의 기초문법과 주석, 선언, 변수 및 상수를 다룹니다.</p>
