--- a/summary.html
+++ b/summary.html
@@ -67,22 +67,10 @@
                 <dd id="d1-7" class="sdb">웹 파싱</dd>
             </span>
         </dl>
-        <div id="docs_fun">
-            <img id="search" src="img/search.png">
-            <div id="autocomplete">
-                <li class="auto">로렘입숨</li>
-                <li class="auto">로오렘입숨</li>
-                <li class="auto">로오오렘입숨</li>
-                <li class="auto">로오오오렘입숨</li>
-                <li class="auto">로오오오오렘입숨</li>
-            </div>
-            <form autocomplete="off">
-                <input id="search" type="text" placeholder="검색...">
-            </form>
-        </div>
+        
     </aside>
     <article>
-        <section id="summary">
+        <section class="docs_con" id="summary">
             <div id="1-1" class="content">
                 <p class="title">알아두기</p>
                 <p class="dscrpt">카카오톡 봇을 개발하기 전 이를 꼭 알아두세요.</p><br><br>
