--- a/legacyAPI.html
+++ b/legacyAPI.html
@@ -534,6 +534,21 @@
                 </div>
             </div>
         </section>
+        <section id="tool">
+            <form autocomplete="off">
+                <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!">
+                <button id="search_btn" type="button"><img src="img/search.png"></button>
+                <div id="auto">
+                    <table>
+                        <tr id="one"><td>로렘 입숨</td></tr>
+                        <tr id="two"><td>로렘 입숨</td></tr>
+                        <tr id="thr"><td>로렘 입숨</td></tr>
+                        <tr id="fou"><td>로렘 입숨</td></tr>
+                        <tr id="fiv"><td>로렘 입숨</td></tr>
+                    </table>
+                </div>
+            </form>
+        </section>
     </article>
     <script type="text/javascript">if($("section#body").width == 0){ location.reload(); }</script>
     <!-- <script type="text/javascript" src="script/require.js"></script> -->
