--- a/legacyAPI.html
+++ b/legacyAPI.html
@@ -540,11 +540,11 @@
                 <button id="search_btn" type="button"><img src="img/search.png"></button>
                 <div id="auto">
                     <table>
-                        <tr id="one"><td>로렘 입숨</td></tr>
-                        <tr id="two"><td>로렘 입숨</td></tr>
-                        <tr id="thr"><td>로렘 입숨</td></tr>
-                        <tr id="fou"><td>로렘 입숨</td></tr>
-                        <tr id="fiv"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr id="last"><td>로렘 입숨</td></tr>
                     </table>
                 </div>
             </form>
