--- a/API2.html
+++ b/API2.html
@@ -624,15 +624,15 @@
             <form autocomplete="off">
                 <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!">
                 <button id="search_btn" type="button"><img src="img/search.png"></button>
-                <div id="auto">
+                <!-- <div id="auto">
                     <table>
-                        <tr id="one"><td>로렘 입숨</td></tr>
-                        <tr id="two"><td>로렘 입숨</td></tr>
-                        <tr id="thr"><td>로렘 입숨</td></tr>
-                        <tr id="fou"><td>로렘 입숨</td></tr>
-                        <tr id="fiv"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr id="last"><td>로렘 입숨</td></tr>
                     </table>
-                </div>
+                </div> -->
             </form>
         </section>
     </article>
