--- a/rhino.html
+++ b/rhino.html
@@ -2861,6 +2861,21 @@
                 </div>
             </div>
         </section>
+        <section id="tool">
+            <form autocomplete="off">
+                <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!">
+                <button id="search_btn" type="button"><img src="img/search.png"></button>
+                <div id="auto">
+                    <table>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="last"><td>로렘 입숨</td></tr>
+                    </table>
+                </div>
+            </form>
+        </section>
     </article>
     <script type="text/javascript">if($("section#body").width == 0){ location.reload(); }</script>
     <!-- <script type="text/javascript" src="script/require.js"></script> -->
