--- a/summary.html
+++ b/summary.html
@@ -202,6 +202,21 @@
                 <p class="dscrpt">웹 파싱 후 자신이 필요한 정보만 가져올 수 있도록 작업이 필요합니다. 이를 더 편리하게 할 수 있는 것이 Jsoup입니다. 이는 <strong>심화 > Jsoup</strong> 편에 자세히 다룹니다.</p>
             </div>
         </section>
+        <section id="tool">
+            <form autocomplete="off">
+                <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!">
+                <button id="search_btn" type="button"><img src="img/search.png"></button>
+                <div id="auto">
+                    <table>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="mid"><td>로렘 입숨</td></tr>
+                        <tr class="last"><td>로렘 입숨</td></tr>
+                    </table>
+                </div>
+            </form>
+        </section>
     </article>
     <script type="text/javascript">if($("section#body").width == 0){ location.reload(); }</script>
     <!-- <script type="text/javascript" src="script/require.js"></script> -->
