--- a/summary.html
+++ b/summary.html
@@ -48,8 +48,10 @@
             <dt id="rhino"><img class="side_icon" src="img/rhino.png"></dt>
             <dt id="deepening"><img class="side_icon" src="img/deepening.png"></dt>          
             <dt id="appendix"><img class="side_icon" src="img/appendix.png"></dt>
-            <span id="list" data-isVisible="true">
-                <h1 id="ttl">개요</h1>
+        </dl>
+        <span id="list" class="summary" data-isVisible="true">
+            <div class="ttl"><h1 id="ttl">개요</h1><img id="tool_btn" src="img/tool.png"></div>
+            <span class="sideList" id="deepening">
                 <dd id="d1-1" class="sdb">알아두기</dd><br>
                 <dd id="d1-2" class="sdb">카카오톡 봇</dd><br>
                 <dd id="d1-3" class="sdb">작동 원리</dd><br>
@@ -58,8 +60,7 @@
                 <dd id="d1-6" class="sdb">수신하기</dd><br>
                 <dd id="d1-7" class="sdb">웹 파싱</dd>
             </span>
-        </dl>
-        
+        </span>
     </aside>
     <article>
         <section class="docs_con" id="summary">
@@ -198,19 +199,19 @@
             <form autocomplete="off">
                 <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!">
                 <button id="search_btn" type="button"><img src="img/search.png"></button>
-<<<<<<< HEAD
-                <div id="auto">
-                    <table>
-                        <tr class="mid"><td>로렘 입숨</td></tr>
-                        <tr class="mid"><td>로렘 입숨</td></tr>
-                        <tr class="mid"><td>로렘 입숨</td></tr>
-                        <tr class="mid"><td>로렘 입숨</td></tr>
-                        <tr class="last"><td>로렘 입숨</td></tr>
-                    </table>
-                </div>
-=======
->>>>>>> bc94d637f7a3bd3955efcdd7aa7ae3cc410f586a
             </form>
+            <div class="tool_sec" id="theme">
+                <p class="stitle">테마</p>
+                <p class="dscrpt">문서의 테마를 설정합니다.</p>
+            </div>
+            <div class="tool_sec" id="font_docs">
+                <p class="stitle">텍스트 글꼴</p>
+                <p class="dscrpt">문서 내의 텍스트 글꼴을 설정합니다.</p>
+            </div>
+            <div class="tool_sec" id="font_code">
+                <p class="stitle">코드 글꼴</p>
+                <p class="dscrpt">문서 내의 코드블럭과 코드박스 글꼴을 설정합니다.</p>
+            </div>
         </section>
     </article>
     <script type="text/javascript">if($("section#body").width == 0){ location.reload(); }</script>
