og_image 변경 자동화.

--- a/full.html
+++ b/full.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kkotbot-docs.kro.kr">
     <meta property="og:title" content="KBot Docs | 전체">
-    <meta property="og:image" content="img/grp.jpg">
+    <meta property="og:image" content="img/grp/default.jpg">
     <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
     <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="script/jquery-ui.js"></script>
