--- a/summary.html
+++ b/summary.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="script/inko.js"></script>
     <script type="text/javascript" src="script/search.js"></script>
     <script type="text/javascript" src="script/copy.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.3.1/highlight.min.js"></script>
+    <script type="text/javascript" src="script/hljs.js"></script>
     <script type="text/javascript" src="script/hl.js"></script>
     <script type="text/javascript" src="script/firebase.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
