--- a/full.html
+++ b/full.html
@@ -48,6 +48,7 @@
             <dt id="rhino"><img class="side_icon" src="img/rhino.png"></dt>
             <dt id="deepening"><img class="side_icon" src="img/deepening.png"></dt>          
             <dt id="appendix"><img class="side_icon" src="img/appendix.png"></dt>
+            <dt id="bookmark"><img class="side_icon" src="img/bookmark.png"></dt>
         </dl>
         <span id="list" class="summary" data-isVisible="true">
             <div class="ttl"><h1 id="ttl">개요</h1><img id="tool_btn" src="img/tool.png"></div>
@@ -123,6 +124,12 @@
                 <dd id="d99-1" class="sdb">참고자료</dd><br>
                 <dd id="d99-2" class="sdb">도움주신 분들</dd><br>
                 <dd id="d99-3" class="sdb">문의하기</dd>
+            </span>
+        </span>
+        <span id="list" class="bookmark" data-isVisible="false">
+            <div class="ttl"><h1 id="ttl">북마크</h1><img id="tool_btn" src="img/tool.png"></div>
+            <span class="sideList" id="bookmark">
+                <dd class="sdb" onclick="bkmk(0)">bkmk1</dd>
             </span>
         </span>
     </aside>
@@ -4108,6 +4115,7 @@
             </div>
         </section>
         <section id="tool">
+            <img id="login" src="img/login.png">
             <form autocomplete="off">
                 <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!">
                 <button id="search_btn" type="button"><img src="img/search.png"></button>
