구오아아아앙아

--- a/API2.html
+++ b/API2.html
@@ -48,6 +48,7 @@
             <dt id="rhino"><img class="side_icon" src="img/rhino.png"></dt>
             <dt id="deepening"><img class="side_icon" src="img/deepening.png"></dt>          
             <dt id="appendix"><img class="side_icon" src="img/appendix.png"></dt>
+            <dt id="bookmark"><img class="side_icon" src="img/bookmark.png"></dt>
         </dl>
         <span id="list" class="API2" data-isVisible="true">
             <div class="ttl"><h1 id="ttl">API 2</h1><img id="tool_btn" src="img/tool.png"></div>
@@ -61,6 +62,11 @@
                 <dd id="d3-7" class="sdb">Http</dd><br>
                 <dd id="d3-8" class="sdb">SessionManager</dd><br>
                 <dd id="d3-9" class="sdb">Security</dd>
+            </span>
+        </span>
+        <span id="list" class="bookmark" data-isVisible="false">
+            <div class="ttl"><h1 id="ttl">북마크</h1><img id="tool_btn" src="img/tool.png"></div>
+            <span class="sideList" id="bookmark">
             </span>
         </span>
     </aside>
@@ -623,6 +629,7 @@
             </div>
         </section>
         <section id="tool">
+            <div id="login"><img id="login" src="img/profile.png"></div>
             <form autocomplete="off">
                 <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!">
                 <button id="search_btn" type="button"><img src="img/search.png"></button>
