--- a/legacyAPI.html
+++ b/legacyAPI.html
@@ -48,6 +48,7 @@
             <dt id="rhino"><img class="side_icon" src="img/rhino.png"></dt>
             <dt id="deepening"><img class="side_icon" src="img/deepening.png"></dt>          
             <dt id="appendix"><img class="side_icon" src="img/appendix.png"></dt>
+            <dt id="bookmark"><img class="side_icon" src="img/bookmark.png"></dt>
         </dl>
         <span id="list" class="legacyAPI" data-isVisible="true">
             <div class="ttl"><h1 id="ttl">레거시 API</h1><img id="tool_btn" src="img/tool.png"></div>
@@ -63,6 +64,11 @@
                 <dd id="d2-9" class="sdb">replier</dd><br>
                 <dd id="d2-10" class="sdb">imageDB</dd>
             </span> 
+        </span>
+        <span id="list" class="bookmark" data-isVisible="false">
+            <div class="ttl"><h1 id="ttl">북마크</h1><img id="tool_btn" src="img/tool.png"></div>
+            <span class="sideList" id="bookmark">
+            </span>
         </span>
     </aside>
     <article>
@@ -528,6 +534,7 @@
             </div>
         </section>
         <section id="tool">
+            <div id="login"><img id="login" src="img/profile.png"></div>
             <form autocomplete="off">
                 <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!">
                 <button id="search_btn" type="button"><img src="img/search.png"></button>
