--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="script/jquery-ui.js"></script>
     <script type="text/javascript" src="script/dark.js"></script>
     <script type="text/javascript" src="script/index.js"></script>
+    <script type="text/javascript" src="script/anime.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <link rel="stylesheet" href="style/index.css">
@@ -25,24 +26,95 @@
     <link rel="canonical" href="https://kkotbot-docs.kro.kr">
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/docs_black.png">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
-    <title>KBot Docs</title>
+    <title>KBot Docs | 카카오톡 봇 문서</title>
 </head>
 <body>
-    <article>
-        <img id="one" src="img/home_bg.png">
-        <img id="two" src="img/home_bg.png">
+    <article id="top">
+        <section id="right">
+            <img id="bg" src="img/main_bg.png">
+        </section>
+        <section id="left">
+            <div class="anim">
+                <svg
+                 xmlns:dc="http://purl.org/dc/elements/1.1/"
+                 xmlns:cc="http://creativecommons.org/ns#"
+                 xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                 xmlns:svg="http://www.w3.org/2000/svg"
+                 xmlns="http://www.w3.org/2000/svg"
+                 xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+                 xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+                 version="1.1"
+                 id="svg10"
+                 width="300"
+                 height="300"
+                 viewBox="0 0 300 300"
+                 sodipodi:docname="docs_black.svg"
+                 inkscape:version="1.0.1 (3bc2e813f5, 2020-09-07)">
+                <metadata id="metadata16">
+                  <rdf:RDF>
+                    <cc:Work
+                       rdf:about="">
+                      <dc:format>image/svg+xml</dc:format>
+                      <dc:type
+                         rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+                      <dc:title />
+                    </cc:Work>
+                  </rdf:RDF>
+                </metadata>
+                <defs
+                   id="defs14" />
+                <sodipodi:namedview
+                   pagecolor="#ffffff"
+                   bordercolor="#666666"
+                   borderopacity="1"
+                   objecttolerance="10"
+                   gridtolerance="10"
+                   guidetolerance="10"
+                   inkscape:pageopacity="0"
+                   inkscape:pageshadow="2"
+                   inkscape:window-width="1680"
+                   inkscape:window-height="983"
+                   id="namedview12"
+                   showgrid="false"
+                   inkscape:zoom="2.45"
+                   inkscape:cx="115.22445"
+                   inkscape:cy="168.33983"
+                   inkscape:window-x="-9"
+                   inkscape:window-y="-9"
+                   inkscape:window-maximized="1"
+                   inkscape:current-layer="g18"
+                   inkscape:document-rotation="0" />
+                <g
+                   inkscape:groupmode="layer"
+                   inkscape:label="Image"
+                   id="g18">
+                  <path
+                     style="fill : none;
+                            stroke : #000000;
+                            stroke-width : 25px;
+                            stroke-linecap : butt;
+                            stroke-linejoin : miter;
+                            stroke-opacity : 1"
+                     d="m 12.244898,33.367347 
+                        c -0.442176,15.890482 0.102041,253.775513 0.102041,253.775513
+                        l 89.183671,-76.53061 
+                        c 1.84524,-1.75595 3.90732,-2.52976 6.53062,-2.55102 
+                        l 154.89795,-0.30613 
+                        c 12.82313,-0.22109 24.34123,-10.56348 24.38776,-23.77551 
+                        L 287.2449,36.938775 
+                        c -0.28412,-13.859285 -8.93808,-24.83242 -21.63265,-24.693877 0,0 -222.21089,-0.136055 -233.163271,0.204081 -10.952381,0.340136 -19.761905,5.027886 -20.204081,20.918368 z"
+                     id="path26"
+                     sodipodi:nodetypes="zccccccczz" />
+                </g>
+              </svg>
+            </div><br>
+            <h1 id="top_txt" style="opacity:0;">Kakaotalk Bot Docs</h1>
+        </section>
+        <img id="arrow" src="img/arrow.png" onclick="$([document.documentElement, document.body]).animate({ scrollTop: $('#content').offset().top }, 1200, 'easeOutCubic');">
+    </article>
+    <article id="content">
         <section>
-            <img id="login" src="img/login.png">
-            <img id="docs" src="img/docs.png">
-            <div id="list">
-                <img class="icon" id="summary" src="img/blank.png">
-                <img class="icon" id="legacyAPI" src="img/blank.png">
-                <img class="icon" id="API2" src="img/blank.png">
-                <img class="icon" id="rhino" src="img/blank.png">
-                <img class="icon" id="deepening" src="img/blank.png">
-                <img class="icon" id="appendix" src="img/blank.png">
-                <img class="icon" id="full" src="img/blank.png">
-            </div>
+            <p>aaa</p>
         </section>
     </article>
 </body>
