--- a/rhino.html
+++ b/rhino.html
@@ -48,6 +48,7 @@
             <dt id="rhino"><img class="side_icon" id="this" src="img/rhino.png"></dt>
             <dt id="deepening"><img class="side_icon" src="img/deepening.png"></dt>          
             <dt id="appendix"><img class="side_icon" src="img/appendix.png"></dt>
+            <dt id="bookmark"><img class="side_icon" src="img/bookmark.png"></dt>
         </dl>
         <span id="list" class="rhino" data-isVisible="true">
             <div class="ttl"><h1 id="ttl">라이노 엔진</h1><img id="tool_btn" src="img/tool.png"></div>
@@ -64,6 +65,11 @@
                 <dd id="d4-10" class="sdb">예외</dd><br>
                 <dd id="d4-11" class="sdb">람다식</dd><br>
                 <dd id="d4-12" class="sdb">함수</dd>
+            </span>
+        </span>
+        <span id="list" class="bookmark" data-isVisible="false">
+            <div class="ttl"><h1 id="ttl">북마크</h1><img id="tool_btn" src="img/tool.png"></div>
+            <span class="sideList" id="bookmark">
             </span>
         </span>
     </aside>
@@ -2855,6 +2861,7 @@
             </div>
         </section>
         <section id="tool">
+            <div id="login"><img id="login" src="img/profile.png"></div>
             <form autocomplete="off">
                 <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!">
                 <button id="search_btn" type="button"><img src="img/search.png"></button>
