--- a/deepening.html
+++ b/deepening.html
@@ -15,6 +15,7 @@
     <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
     <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="script/jquery-ui.js"></script>
+    <script type="text/javascript" src="script/cookie.js"></script>
     <script type="text/javascript" src="script/animation.js"></script>
     <script type="text/javascript" src="script/sidebar.js"></script>
     <script type="text/javascript" src="script/dark.js"></script>
