--- a/full.html
+++ b/full.html
@@ -15,6 +15,7 @@
     <meta property="og:description" content="카카오톡 봇의 정보가 모인 카카오톡 봇 문서입니다.">
     <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="script/jquery-ui.js"></script>
+    <script type="text/javascript" src="script/cookie.js"></script>
     <script type="text/javascript" src="script/animation.js"></script>
     <script type="text/javascript" src="script/sidebar_full.js"></script>
     <script type="text/javascript" src="script/dark.js"></script>
@@ -4117,8 +4118,8 @@
         <section id="tool">
             <div id="login"><img id="login" src="img/profile.png"></div>
             <form autocomplete="off">
-                <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!">
-                <button id="search_btn" type="button"><img src="img/search.png"></button>
+                <input id="search_txt" type="text" placeholder="검색할 내용을 입력하세요!" name="search">
+                <button id="search_btn" type="submit"><img src="img/search.png"></button>
             </form>
             <div class="tool_sec" id="theme">
                 <p class="stitle">테마</p>
