오늘은 여기까지

--- a/summary.html
+++ b/summary.html
@@ -75,7 +75,7 @@
                 <p class="title">알아두기</p>
                 <p class="dscrpt">카카오톡 봇을 개발하기 전 이를 꼭 알아두세요.</p><br><br>
                 <li class="dscrpt">Java와 JavaScript는 서로 다른 언어입니다. 고로, JavaScript를 Java라고 줄여서 사용하지 않습니다.</li>
-                <li class="dscrpt">카카오톡 봇에서 사용하는 JavaScript는 순수 자바스크립트가 아닌 Rhino라는 Java로 작성된 JavaScript 엔진입니다. 그러므로 카카오톡 봇에서는 <p class="code" id="p">alert()</p>와 같은 기능을 제공하지 않습니다.</li>
+                <li class="dscrpt">카카오톡 봇에서 사용하는 JavaScript는 순수 자바스크립트가 아닌 Rhino라는 Java로 작성된 JavaScript 엔진입니다. 그러므로 카카오톡 봇에서는 <p class="code">alert()</p>와 같은 기능을 제공하지 않습니다.</li>
                 <li class="dscrpt">안드로이드 버전 5.0(롤리팝) 미만이나 iOS는 카카오톡 봇을 구동할 수 없는 환경입니다.</li>
             </div>
             <div id="1-2" class="content">
@@ -134,37 +134,37 @@
                             <th>형식</th>
                             <th>기능</th>
                             <tr>
-                                <td><p class="code" id="p">room</p></td>
-                                <td><p class="code" id="p">String</p></td>
+                                <td><p class="code">room</p></td>
+                                <td><p class="code">String</p></td>
                                 <td>해당 룸의 이름을 문자열 형식으로 반환합니다.</td>
                             </tr>
                             <tr>
-                                <td><p class="code" id="p">msg</p></td>
-                                <td><p class="code" id="p">String</p></td>
+                                <td><p class="code">msg</p></td>
+                                <td><p class="code">String</p></td>
                                 <td>메시지내용을 문자열 형식으로 반환합니다.</td>
                             </tr>
                             <tr>
-                                <td><p class="code" id="p">sender</p></td>
-                                <td><p class="code" id="p">String</p></td>
+                                <td><p class="code">sender</p></td>
+                                <td><p class="code">String</p></td>
                                 <td>메시지 전송자의 이름을 문자열 형식으로 반환합니다.</td>
                             </tr>
                             <tr>
-                                <td><p class="code" id="p">isGroupChat</p></td>
-                                <td><p class="code" id="p">Boolean</p></td>
+                                <td><p class="code">isGroupChat</p></td>
+                                <td><p class="code">Boolean</p></td>
                                 <td>해당룸의 그룹채팅 여부를 불린 형식으로 반환합니다.</td>
                             </tr>
                             <tr>
-                                <td><p class="code" id="p">replier</p></td>
-                                <td><p class="code" id="p">void</p></td>
+                                <td><p class="code">replier</p></td>
+                                <td><p class="code">void</p></td>
                                 <td>해당룸의 세션을 반환합니다.</td>
                             </tr>
                             <tr>
-                                <td><p class="code" id="p">imageDB</p></td>
-                                <td><p class="code" id="p">-</p></td>
+                                <td><p class="code">imageDB</p></td>
+                                <td><p class="code">-</p></td>
                                 <td>이미지DB를 반환합니다.</td>
                             </tr>
                             <tr>
-                                <td><p class="code" id="p">packageName</p></td>
+                                <td><p class="code">packageName</p></td>
                                 <td><p class="code" id="p">String</p></td>
                                 <td>메시지 나타난 앱의 패키지명을 반환합니다. (카카오톡의 경우 <p class="code" id="p">com.kakao.talk</p>입니다.)</td>
                             </tr>
